# market-dashboard

./: .gitattributes  .gitignore  CAPEX_CYCLE_IDEAS.md  Makefile  REDESIGN_PLAN.md  REVIEW.md  app.jsx  dashboard.html  dashboard.py  dashboard_editorial.py  data.js  live_prices.py  pyproject.toml  requirements.txt  styles.css
.streamlit/: config.toml
assets/: catalog.json  theme.css
components/: __init__.py  masthead.py  paper_book.py  pipeline_stats.py  report_comparison.py  retrospective.py  scenario_log.py  signal_tracker.py  terminology.py  trim_experiment.py
data/: capex_quarterly.json  changelog.json  claude_analysis.csv  earnings_cascades.json  earnings_history.csv  market_data.csv  morning_report_2026-03-12.json  morning_report_2026-03-13.json  morning_report_2026-03-16.json  morning_report_2026-03-17.json  morning_report_2026-03-18.json  morning_report_2026-03-19.json  morning_report_2026-03-19v1.json  morning_report_2026-03-20.json  morning_report_2026-03-23.json  morning_report_2026-03-24.json  morning_report_2026-03-25.json  morning_report_2026-03-26.json  morning_report_2026-03-27.json  morning_report_2026-03-30.json  morning_report_2026-03-31.json  morning_report_2026-04-01.json  morning_report_2026-04-02.json  morning_report_2026-04-06.json  morning_report_2026-04-07.json  morning_report_2026-04-08.json  morning_report_2026-04-09.json  morning_report_2026-04-10.json  morning_report_2026-04-13.json  morning_report_2026-04-14.json  morning_report_2026-04-15.json  morning_report_2026-04-16.json  morning_report_2026-04-17.json  (+82 more)
docs/: DESIGN_HANDOFF.md  (+3 more)
(+91 files in other folders)
